# SamplePrograms

./: CompetiveProgramming  CreateTableAndInsertValue.sql  Cursor in proc  README.md  index.html  params.json  sampleProgramIndex.txt  time in c++
BatchScripting/: getYesterdayDate
DesignPattern/: CrtpPattern.cpp  Singleton.cpp
Miscellaneous/:  Prime number program with efficiency methods  ParquetReading.cpp  vim-settings
Miscellaneous/cmake/: CMakeLists.txt
Miscellaneous/cmake/src/: cppFile.cpp
PERL-PROGRAMMING/: array_in_perl.pl  comment_line_in_perl.pl  interpolate_in_perl.pl  perl_adding_and_removing_elements_in_array.pl  perl_hello_world.pl
PL-SQL/: AnonymousProcedure.sql  Casting.sql  Conditional Statements.sql  CreateTable  Cursor.sql  Exception.sql  For Loop in plsql - With For statement  For Loop in plsql - select statement  ForLoopToSelectFromTable.sql  If statement in plsql  Loop in plsql without For statement  OracleBasicSyntaxHelper  OracleBasicSyntaxHelper.sql  Parsing_with_delimiter  Procedure in Plsql  StoredProcedureTemplateOra.sql  StoredProcedureWithCursor.sql  StringManipulation.sql  Tempoary Function.sql  While Loop.sql  XMLParsing.sql  bulkCollect.sql  decode function  etcPlSqlCommands.sql  instr_in_plsql  loopsInPlSql.sql  plsqlTypes.sql  stringManipulation.sql  substr_in_plsql
PYTHON/: find_n_th_element.py  input_output.py  read_file_in_python.py
Python/: ArithemeticOperations.py  ClassAndObjects.py  ConditionAndLoops.py  DataStructures.py  Functions.py  OracleConnection.py  PythonBasics.py  PythonEtc.py  PythonString.py  (+3 more)
(+267 files in other folders)
